--- a/index.html
+++ b/index.html
@@ -431,9 +431,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/tourisme_3.jpeg" alt="">
+                        <img class="img-fluid" src="img/tourisme.jpeg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/tourisme_3.jpeg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/tourisme.jpeg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
@@ -474,7 +474,7 @@
                     <h1 class="display-5 mb-0">Pour toute collaboration</h1>
                 </div>
                 <div class="col-sm-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="https://forms.gle/PPheMSxXAF5oZMKb8">Contactez-nous</a>
+                    <a class="btn btn-primary py-3 px-5" href="tel:+33773152606">Contactez-nous</a>
                 </div>
             </div>
             <div class="row g-5">
@@ -487,9 +487,9 @@
                     <hr class="w-100">
                     <p class="mb-2">Suivez-moi:</p>
                     <div class="d-flex pt-2">
-                        <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.facebook.com/share/12CL7Q9VxE3/"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.instagram.com/rodiath07?utm_source=qr&igsh=MTMwaGRnMm5zdjRkeA=="><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-square btn-primary me-2" href="https://www.linkedin.com/in/rodiath-codja-a12343298?utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-7 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
