--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                     <h1 class="display-5 mb-0">Pour toute collaboration</h1>
                 </div>
                 <div class="col-sm-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="tel:+33773152606">Contactez-nous</a>
+                    <a class="btn btn-primary py-3 px-5" href="tel:+33773152606">Contactez-moi</a>
                 </div>
             </div>
             <div class="row g-5">
