--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     <h1 class="display-5 mb-0">My Services</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="">Engagez-moi</a>
+                    <a class="btn btn-primary py-3 px-5" href="tel:+33773152606">Engagez-moi</a>
                 </div>
             </div>
             <div class="row g-4">
